# MIMUW-PW-Tasks

./: .gitignore  README.md
Lab_1/src/: Main.java  ManyThreads.java  SingleThread.java  TwoThreads.java  TwoWriters.java  TwoWritersSynchronized.java
Lab_10/: CMakeLists.txt  gifts.c
Lab_11/: CMakeLists.txt  err.h  more_info.c  signal_mask.c  simple_handler.c  terminator.c
Lab_2/src/: ResponsiveFileDownloader.java  UnresponsiveFileDownloader.java  Vector.java
Lab_3/src/: ArrayRearrangement.java  CountDown.java  MatrixRowSums.java  ProducersConsumers.java  TwoCounterIncreasers.java
Lab_4/src/: Bank.java  MatrixRowSumsThreadsafe.java  ParallelSumAtomic.java  ProducersConsumersQueue.java  TwoWritersSharedArray.java
Lab_5/cz_1/src/: Fibonacci.java  Jedynkowanie.java  Kwadraty.java  MatrixRowSumsThreadPool.java  Piramida.java
Lab_5/cz_2/src/: BankDatabase.java  RabbitAndTurtle.java
Lab_6/src/: BlockingQueue.java  BlockingQueueTest.java
Lab_7/: line.c
Lab_8/: CMakeLists.txt  child-fifo.c  child-pipe.c  myPipe.c  parent-fifo.c  parent-pipe.c
Lab_9/: CMakeLists.txt  readers-writers-template.c
Zaliczeniowe_1/src/main/java/concurrentcube/: Cube.java  Piece.java  Side.java
Zaliczeniowe_1/src/test/java/concurrentcube/: CubeTest.java
Zaliczeniowe_2/: CMakeLists.txt  Node.c  Node.h  SafeHashMap.c  SafeHashMap.h  Tree.c  Tree_sequential.c  path_utils.c  path_utils.h
Zaliczeniowe_3/: Makefile  main  main.cpp  new_process  new_process.cpp  sharedresults.hpp  teams.cpp
